@@ -1,5 +1,8 @@
+- partial sync with kernel-3.11 regarding USB: include
+  ehci-tegra, ohci-pci ohci-platform fusbh200-hcd & usb_common
+  (might fix mga#11377)
 - add xterm-256color to terminfos
-- add utils for harddisk repair
+- add utils for harddisk recovery
 - prelink files
 - include db*_dump, db*_load & db*_recover also in ucDrakx environment
 - include network interface name udev rule (mga#10947)
